--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
+html,
 body {
+  overflow: hidden !important;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: hsl(348, 100%, 61%);
+}
+
+#root {
+  height: 100vh;
+  display: block;
+  padding: 15px;
+  padding-right: 0;
+  position: relative;
 }
