--- a/src/App.scss
+++ b/src/App.scss
@@ -11,8 +11,7 @@ $outerPadding: 15px;
 
   .main.menu li > a {
     padding: 0.8em 0.9em;
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
+    margin: 0.2em 0;
     font-size: 1.05em;
     border-radius: $borderRadius;
 
@@ -29,5 +28,6 @@ $outerPadding: 15px;
 
   .outlet {
     padding-right: 30px;
+    overflow: auto;
   }
 }
