--- a/src/pages/02-packets.scss
+++ b/src/pages/02-packets.scss
@@ -16,7 +16,7 @@
         padding: 8px;
         vertical-align: middle;
         display: inline-block;
-        max-width: 250px;
+        max-width: 500px;
         border: 2px solid #000;
         margin: 0 10px;
         border-radius: 5px;
@@ -24,5 +24,27 @@
         .name {
             color: blue;
         }
+
+        .validname {
+            color: green;
+        }
+
+        .invalidname {
+            color: red;
+        }
+    }
+
+    .invalid {
+        display: inline-block;
+        padding: 8 px;
+        font-size: 2.5em;
+        color: red;
+    }
+
+    .valid {
+        display: inline-block;
+        padding: 18 px;
+        font-size: 2.5em;
+        color: green;
     }
 }
