--- a/src/components/Code.scss
+++ b/src/components/Code.scss
@@ -1,6 +1,7 @@
 .code-comp {
     border: 1px solid #eee;
     box-shadow: 0 0 10px #eee;
+    margin: 1em 0;
 
     .tabs, .tabs > ul {
         margin: 0;
