--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,9 @@ body {
   overflow: hidden !important;
   margin: 0;
   padding: 0;
-}
 
-body {
-  background-color: hsl(348, 100%, 61%);
+  --main-color: hsl(348, 100%, 61%);
+  background-color: var(--main-color);
 }
 
 #root {
