--- a/src/pages/01-intro/ExpandableBubble.scss
+++ b/src/pages/01-intro/ExpandableBubble.scss
@@ -5,6 +5,7 @@
   .bubble {
     display: inline-block;
     width: 200px;
+    max-width: calc(50vw - 20px);
     aspect-ratio: 1/1;
     position: relative;
     background-color: #f2f2f2;
@@ -13,8 +14,7 @@
     font-size: 16px;
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
-    margin: 10px 20px;
-    margin-left: 0px;
+    margin: min(10px, 1vw) min(10px, 1vw);
     text-align: center;
     z-index: 5;
   }
@@ -56,27 +56,5 @@
 
   .bubble.expanded .bubble-label {
     display: none;
-  }
-
-  @media screen and (max-width: 768px) {
-    .bubbles-container {
-      max-width: 100%;
-      padding: 0 20px;
-    }
-
-    .bubble {
-      width: calc(50% - 10px);
-      height: 150px;
-    }
-
-    .bubble:hover {
-      width: 50%;
-      height: 200px;
-    }
-
-    .bubble.expanded {
-      width: 60%;
-      height: 250px;
-    }
   }
 }
