app: refactor class

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 $borderRadius: 25px;
 $outerPadding: 15px;
 
-.outer {
+.app-outer {
   background-color: #fdfdfd;
   height: calc(100vh - 2 * $outerPadding);
   margin: 0;
