hourglass popup color

--- a/src/pages/hourglass.scss
+++ b/src/pages/hourglass.scss
@@ -17,7 +17,7 @@
   .popup {
     position: absolute;
     margin-top: 50px;
-    background-color: rgb(177, 73, 73);
+    background-color: hsl(348, 100%, 61%);
     color: whitesmoke;
     border: 1px solid rgba(245, 239, 239, 0.869);
     padding: 10px;
