--- a/src/pages/PacketDemo.scss
+++ b/src/pages/PacketDemo.scss
@@ -4,3 +4,19 @@
 progress{
     margin-top: 8px
 }
+.container{
+    margin: 16px;
+    margin-bottom: 50px
+}
+.box {
+    padding: 0px;
+    // width: 300px;
+}
+
+.react-flow__node {
+    font-size: 16px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 3px;
+}
